--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,14 @@ body {
     display: table;
     float: left;
 }
+.logo img {
+    max-height: 60px;
+    width: auto;
+    border-radius: 50%;
+    position: relative;
+    left: -10px; /* Move 3px to the left */
+    top: 5px; /* Move 3px down */
+  }
 
 .logo h1 {
     text-transform: capitalize;
@@ -38,7 +46,7 @@ body {
     vertical-align: middle;
     color: black;
     font-family: avenir;
-    font-size: 35px;
+    font-size: 29px;
 }
 
 .logo h1 span {
