--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+*{
+    font-family: 'Poppins', sans-serif;
+    margin:0; padding: 0;
+    box-sizing: border-box;
+    outline: none; border: none;
+    text-transform: capitalize;
+    transition: all .2s ease-out;
+    text-decoration: none;
+}
 /* Navbar */
 * {
     margin: 0;
@@ -36,8 +45,8 @@ body {
     height: 100%;
     display: table-cell;
     vertical-align: middle;
-    color: black;
-    font-family: avenir;
+    color: #A7E6FF;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
 }
 
@@ -98,7 +107,7 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #86B6F6;
+    background-color: #A7E6FF;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -121,7 +130,7 @@ body {
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #86B6F6;
+    background-color: #A7E6FF;
 }
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 body {
@@ -148,28 +157,31 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Black color with 80% opacity */
+    background-color: rgba(0, 0, 0, 0.6); /* Black color with 80% opacity */
     z-index: 1; /* Ensure the overlay is behind the content */
 }
   
 .hero-content {
     position: relative;
     z-index: 2; /* Ensure the content is on top of the overlay */
-    text-align: center; /* Center text */
-    color: #fff;
+    text-align:center; /* Center text */
+    color: whitesmoke;
     max-width: 80%; /* Adjust the width as needed */
-    padding: 30px; /* Add padding to the text */
+    padding: 35px; /* Add padding to the text */
+    font-size: medium4w;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
   
 .hero-title {
     font-size: 3em;
     margin-bottom: 20px;
+    color:whitesmoke;
+    font-weight: bold;
     animation: fadeInUp 1s ease-in-out;
 }
   
 .hero-subtitle {
-    font-size: 1.5em;
+    font-size: 2em;
     margin-bottom: 30px;
     animation: fadeInUp 1s ease-in-out 0.5s;
 }
@@ -197,15 +209,7 @@ body {
     --border:.2rem solid #36098d;
 }
 
-*{
-    font-family: 'Poppins', sans-serif;
-    margin:0; padding: 0;
-    box-sizing: border-box;
-    outline: none; border: none;
-    text-transform: capitalize;
-    transition: all .2s ease-out;
-    text-decoration: none;
-}
+/* to add */
 
 html{
     font-size: 62.5%;
@@ -219,7 +223,12 @@ section{
 }
 
 section:nth-child(even){
-    background: #6be6f9;
+    background:#A7E6FF;
+}
+h1{
+    color:#A7E6FF;
+    font-sizE:150px;
+    font-weight: bold;
 }
 
 .heading{
