--- a/styles.css
+++ b/styles.css
@@ -146,8 +146,9 @@ body {
 .dropdown:hover .dropbtn {
 
     background-color: #A7E6FF;
+    background-color: #86B6F6;
 }
-=======
+
     background-color: #86B6F6;
 
 
