--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 .header {
     max-width: 100%;
     height: 70px;
-    background-color: #86b6f6;
+    background-color: #A7E6FF;
     display: block;
 }
 
@@ -53,7 +53,12 @@ body {
     height: 100%;
     display: table-cell;
     vertical-align: middle;
-    color: rgb(0, 0, 0);
+
+    color:#A7E6FF;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+
+    color: black;
     font-family: avenir;
     font-size: 29px;
 
@@ -140,10 +145,13 @@ body {
 
 .dropdown:hover .dropbtn {
 
-    background-color: #A7E6FF;
-
-
+    background-color:#A7E6FF;
+    background-color:#A7E6FF;
 }
+
+    
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 body {
     margin: 0;
@@ -358,6 +366,7 @@ h1{
     line-height: 1.8;
     text-shadow: var(--text-shadow);
 }
+
 .home .content p{
     font-size: 1.7rem;
     color:var(--light-color);
