--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 *{
     font-family: 'Poppins', sans-serif;
     margin:0; padding: 0;
@@ -21,7 +22,7 @@ body {
 .header {
     max-width: 100%;
     height: 70px;
-    background-color: #86b6f6;
+    background-color: #A7E6FF;
     display: block;
 }
 
@@ -54,10 +55,10 @@ body {
     display: table-cell;
     vertical-align: middle;
 
-    color: #A7E6FF;
+    color:#A7E6FF;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
-=======
+
     color: black;
     font-family: avenir;
     font-size: 29px;
@@ -145,10 +146,11 @@ body {
 
 .dropdown:hover .dropbtn {
 
-    background-color: #A7E6FF;
+    background-color:#A7E6FF;
+    background-color:#A7E6FF;
 }
-=======
-    background-color: #86B6F6;
+
+    
 
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
@@ -571,4 +573,90 @@ h1{
 .book .row form .btn{
     padding:1rem 4rem;
 }
+/* footer section starts */
 
+
+.container-hack
+{
+    width:80%;
+    margin:auto;
+    
+}
+.footer-row
+{
+    display:flex;
+    flex-wrap: wrap;
+}
+.footer-col ul
+{
+    list-style: none;
+}
+.footer-hack
+{
+    margin-top: auto;
+    background-color:#A7E6FF;
+    padding: 70px 0;
+    bottom: 0;
+    position: relative;
+    width: 100%;
+}
+.footer-col
+{
+    padding:0 15px;
+    width:25%;
+}
+.footer-col h4
+{
+    font-size: 20px;
+    color: black;
+    text-transform: capitalize;
+    font-family: 'Franklin Gothic Medium','Arial Narrow', Arial, sans-serif;
+    margin-bottom: 35px;
+    position: relative;
+}
+.footer-col h4::before
+{
+    content: '';
+    position: absolute;
+    left:0;
+    bottom:-10px;
+    background-color:#176b87;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+.footer-col ul li:not(:last-child)
+{
+    margin-bottom: 10px;
+}
+.footer-col ul li a
+{
+    font-size: 16px;
+    color: black;
+    font-weight: 300;
+    text-decoration: none;
+    color: black;
+    display: block;
+    transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+    color:#9e3b33;
+    padding-left:10px;
+}
+.footer-col .social-links a
+{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255,255,255,0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: black;
+    transition:all 0.4s ease;
+}
+.footer-col .social-links a:hover{
+    color: #A7E6FF;
+    background-color: #176b87;
+}
