--- a/styles.css
+++ b/styles.css
@@ -55,19 +55,17 @@ body {
     display: table-cell;
     vertical-align: middle;
 
-    color:#A7E6FF;
+    
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
+    font-weight: bold;
+    
 
-    color: black;
+    color: #36098d;
     font-family: avenir;
-    font-size: 29px;
+    font-size: 30px;
 
 }
 
-.logo h1 span {
-    font-style: normal;
-}
 
 .navigation {
     height: 100%;
@@ -90,7 +88,7 @@ body {
     height: 100%;
     font-family: tiempos;
     font-size: 24px;
-    color: black;
+    color: #36098d;
     cursor: pointer;
 }
 
@@ -98,7 +96,7 @@ body {
 .dropbtn {
     font-family: tiempos;
     font-size: 24px;
-    color: black;
+    color: #36098d;
     cursor: pointer;
     background-color: inherit;
     border: none;
