--- a/disease1.css
+++ b/disease1.css
@@ -19,16 +19,14 @@
   /* Create two unequal columns that floats next to each other */
   /* Left column */
   .leftcolumn {
-    float: left;
-    width: 75%;
+    float:none;
+    width: 95%;
+   
+    
   }
   
   /* Right column */
-  .rightcolumn {
-    float: left;
-    width: 25%;
-    padding-left: 20px;
-  }
+  
   
   /* Fake image */
   .fakeimg {
